# srst-textmarksman

./: README.md  pyproject.toml
textmarksman/: textmarksman.py  textmarkswoman.py
